--- a/benefits.html
+++ b/benefits.html
@@ -3,125 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vantaggi - ERGO41</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Collega il CSS principale -->
-
-    <!-- Link Bootstrap CSS for responsive design -->
+    <title>Vantaggi - ERGO4ONE | Vantaggi della Decentralizzazione</title>
+    <meta name="description" content="Scopri i vantaggi chiave di ERGO4ONE, come decentralizzazione, trasparenza, equità e costi ridotti grazie alla tecnologia blockchain.">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh; /* Rende il footer sempre in fondo alla pagina */
-        }
-        header {
-            background-color: #333;
-            color: white;
-            padding: 10px 0;
-        }
-        .container {
-            max-width: 1200px;
-            margin: auto;
-            padding: 0 15px;
-            flex: 1; /* Permette al contenuto di espandersi */
-        }
-        .logo-container img {
-            width: 100px;
-        }
-        h1, h2, h3 {
-            color: #333;
-        }
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        nav ul li {
-            display: inline-block;
-            margin-right: 20px;
-        }
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        nav ul li a:hover {
-            text-decoration: underline;
-        }
-        .benefits-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 20px;
-            margin-top: 20px;
-        }
-        .benefit-item {
-            background-color: white;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        footer {
-            margin-top: 50px;
-            padding: 20px;
-            background-color: #333;
-            color: white;
-            text-align: center;
-        }
-    </style>
+    <!-- Structured Data for SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "ERGO4ONE",
+      "url": "https://yourwebsite.com",
+      "logo": "https://i.ibb.co/5Y6fP4Z/ergo.jpg",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+1234567890",
+        "contactType": "Customer Service"
+      }
+    }
+    </script>
 </head>
 <body>
-    <header>
-        <div class="container d-flex justify-content-between align-items-center">
-            <div class="logo-container">
-                <a href="https://ergoplatform.org" target="_blank" rel="noopener noreferrer">
-                    <img src="https://i.ibb.co/5Y6fP4Z/ergo.jpg" alt="Logo ERGO41" class="logo">
-                </a>
-            </div>
-            <h1>ERGO41</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">Chi Siamo</a></li>
-                    <li><a href="benefits.html">Vantaggi</a></li>
-                    <li><a href="donate.html">Dona</a></li>
-                    <li><a href="contact.html">Contatti</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <!-- Include lo stesso header e menu di index.html -->
 
-    <section>
+    <!-- Sezione Vantaggi -->
+    <section id="benefits">
         <div class="container">
             <h2>I Nostri Vantaggi Chiave</h2>
             <div class="benefits-grid">
                 <div class="benefit-item">
                     <h3>Governance Decentralizzata</h3>
-                    <p>Le decisioni all'interno della nostra comunità non sono affidate a un ristretto gruppo di individui, ma sono prese dai membri stessi. Questo modello di governance decentralizzata garantisce che ogni voce venga ascoltata e che ogni voto abbia un impatto reale. In questo modo, promuoviamo un senso di appartenenza e responsabilità condivisa, permettendo a tutti di contribuire attivamente al nostro progetto e alla sua evoluzione.</p>
+                    <p>Le decisioni sono prese dai membri della comunità, assicurando che tutte le voci siano ascoltate e che ogni voto abbia importanza.</p>
                 </div>
                 <div class="benefit-item">
                     <h3>Privacy e Sicurezza</h3>
-                    <p>Utilizziamo le più avanzate tecnologie di crittografia per proteggere i dati dei nostri utenti e garantire che la loro privacy sia sempre al sicuro. Ogni transazione effettuata sulla nostra piattaforma è protetta da sistemi di sicurezza robusti che impediscono accessi non autorizzati e garantiscono l'integrità delle informazioni. Questo ci consente di costruire fiducia e sicurezza tra gli utenti, fondamentali per il successo di qualsiasi iniziativa decentralizzata.</p>
+                    <p>Utilizziamo crittografia avanzata per proteggere i dati dei nostri utenti e garantire la privacy in tutte le transazioni.</p>
                 </div>
                 <div class="benefit-item">
                     <h3>Accessibilità Globale</h3>
-                    <p>La nostra piattaforma è progettata per essere accessibile a chiunque, ovunque nel mondo. Non importa quale sia la tua provenienza o il tuo background; ogni persona ha l'opportunità di partecipare e beneficiare dei servizi offerti. Questa inclusività promuove una comunità veramente globale, in cui le diverse culture e idee possono prosperare e contribuire alla crescita collettiva.</p>
+                    <p>Chiunque, ovunque, può partecipare e beneficiare della nostra piattaforma, promuovendo una comunità veramente globale.</p>
                 </div>
                 <div class="benefit-item">
                     <h3>Costi Ridotti</h3>
-                    <p>Grazie alla nostra innovativa struttura operativa, siamo in grado di ridurre significativamente i costi delle transazioni. Questo non solo permette agli utenti di risparmiare denaro, ma consente anche a più persone di accedere ai nostri servizi senza dover affrontare oneri finanziari eccessivi. Crediamo che l'equità economica sia essenziale per un'adozione diffusa delle tecnologie decentralizzate, e ci impegniamo a rendere i nostri servizi il più economici possibile.</p>
+                    <p>La nostra struttura riduce significativamente i costi delle transazioni, permettendo agli utenti di risparmiare denaro.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 ERGO41. Tutti i Diritti Riservati.</p>
-        </div>
-    </footer>
+    <!-- Include lo stesso footer di index.html -->
 </body>
 </html>
