--- a/about.html
+++ b/about.html
@@ -23,9 +23,163 @@
       }
     }
     </script>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 10px 0;
+            position: relative;
+        }
+        .container {
+            max-width: 1200px;
+            margin: auto;
+            padding: 0 15px;
+            flex: 1;
+        }
+        .logo-container img {
+            width: 100px;
+        }
+        h1, h2, h3 {
+            color: #333;
+        }
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
+        nav ul li {
+            display: inline-block;
+            margin-right: 20px;
+        }
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        nav ul li a:hover {
+            text-decoration: underline;
+        }
+        .btn {
+            background-color: #0056b3;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+        }
+        .btn:hover {
+            background-color: #004080;
+        }
+        footer {
+            margin-top: 50px;
+            padding: 20px;
+            background-color: #333;
+            color: white;
+            text-align: center;
+        }
+
+        /* Stili per il menu a discesa */
+        .hamburger {
+            display: none;
+            flex-direction: column;
+            justify-content: space-around;
+            width: 40px;
+            height: 30px;
+            cursor: pointer;
+            z-index: 10;
+        }
+        .line {
+            height: 4px;
+            width: 100%;
+            background-color: white;
+            transition: 0.3s;
+        }
+
+        /* Stili per il menu mobile */
+        .menu-overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            z-index: 9;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+        .menu-overlay ul {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+        }
+        .menu-overlay ul li {
+            margin: 20px 0;
+        }
+        .menu-overlay.show {
+            display: flex;
+        }
+
+        @media (max-width: 768px) {
+            nav ul {
+                display: none;
+            }
+            .hamburger {
+                display: flex;
+            }
+        }
+    </style>
 </head>
 <body>
-    <!-- Include lo stesso header e menu di index.html -->
+    <!-- Header Section -->
+    <header>
+        <div class="container d-flex justify-content-between align-items-center">
+            <div class="logo-container">
+                <a href="https://ergoplatform.org" target="_blank" rel="noopener noreferrer">
+                    <img src="https://i.ibb.co/5Y6fP4Z/ergo.jpg" alt="Logo ERGO41" class="logo">
+                </a>
+            </div>
+            <h1>MillionErg</h1>
+            <div class="hamburger" id="hamburger">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
+            <nav>
+                <ul id="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">Chi Siamo</a></li>
+                    <li><a href="benefits.html">Vantaggi</a></li>
+                    <li><a href="donate.html">Dona</a></li>
+                    <li><a href="contact.html">Contatti</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <!-- Menu Overlay -->
+    <div class="menu-overlay" id="menu-overlay">
+        <nav>
+            <ul id="nav-links-mobile">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">Chi Siamo</a></li>
+                <li><a href="benefits.html">Vantaggi</a></li>
+                <li><a href="donate.html">Dona</a></li>
+                <li><a href="contact.html">Contatti</a></li>
+            </ul>
+        </nav>
+    </div>
 
     <!-- Sezione Chi Siamo -->
     <section id="about">
@@ -33,10 +187,42 @@
             <h2>Chi Siamo</h2>
             <p>ERGO4ONE è una cooperativa decentralizzata che offre una piattaforma per il cambiamento sociale attraverso la tecnologia blockchain. Siamo un gruppo di individui impegnati a costruire un futuro migliore, equo e accessibile a tutti.</p>
             <h3>La Nostra Visione</h3>
-            <p>Immaginiamo un mondo dove le risorse siano distribuite equamente, senza intermediari. Siamo qui per facilitare questo cambiamento.</p>
+            <p>Immaginiamo un mondo dove le risorse siano distribuite equamente, senza intermediari. Siamo qui per facilitare questo cambiamento, utilizzando la blockchain per creare trasparenza e garantire che tutti abbiano le stesse opportunità.</p>
+            <h3>La Nostra Missione</h3>
+            <p>La nostra missione è fornire alle comunità gli strumenti necessari per avere il controllo delle risorse in modo autonomo e decentralizzato. Crediamo che attraverso la cooperazione e la tecnologia blockchain, sia possibile costruire una società più giusta e prospera, dove ogni individuo possa avere accesso equo alle risorse e partecipare al processo decisionale.</p>
+            <h3>I Nostri Valori</h3>
+            <ul>
+                <li><strong>Equità:</strong> Crediamo nella giustizia e nell'accesso equo alle risorse per tutti.</li>
+                <li><strong>Trasparenza:</strong> La blockchain ci aiuta a garantire che tutte le transazioni siano chiare e verificabili.</li>
+                <li><strong>Autonomia:</strong> Promuoviamo la decentralizzazione per ridurre la dipendenza dagli intermediari e mettere il potere nelle mani delle comunità.</li>
+                <li><strong>Collaborazione:</strong> Favoriamo la collaborazione e la condivisione delle conoscenze per crescere insieme come comunità globale.</li>
+            </ul>
         </div>
     </section>
 
-    <!-- Include lo stesso footer di index.html -->
+    <!-- Footer Section -->
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 ERGO4ONE. Tutti i Diritti Riservati.</p>
+        </div>
+    </footer>
+
+    <script>
+        // Script per gestire l'apertura e la chiusura del menu mobile
+        const hamburger = document.getElementById('hamburger');
+        const menuOverlay = document.getElementById('menu-overlay');
+
+        hamburger.addEventListener('click', () => {
+            menuOverlay.classList.toggle('show');
+        });
+
+        // Chiudi il menu quando si fa clic su un link
+        const menuLinks = document.querySelectorAll("#menu-overlay a");
+        menuLinks.forEach(link => {
+            link.addEventListener('click', () => {
+                menuOverlay.classList.remove('show');
+            });
+        });
+    </script>
 </body>
 </html>
