--- a/benefits.html
+++ b/benefits.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vantaggi - ERGO4ONE | Vantaggi della Decentralizzazione</title>
-    <meta name="description" content="Scopri i vantaggi chiave di ERGO4ONE, come decentralizzazione, trasparenza, equità e costi ridotti grazie alla tecnologia blockchain.">
+    <title>Vantaggi - ERGO4ONE | I Vantaggi di una Comunità Decentralizzata</title>
+    <meta name="description" content="Scopri i vantaggi di ERGO4ONE: decentralizzazione, trasparenza, equità e accessibilità globale grazie alla blockchain.">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
@@ -23,9 +23,178 @@
       }
     }
     </script>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            padding: 10px 0;
+            position: relative;
+        }
+        .container {
+            max-width: 1200px;
+            margin: auto;
+            padding: 0 15px;
+            flex: 1;
+        }
+        .logo-container img {
+            width: 100px;
+        }
+        h1, h2, h3 {
+            color: #333;
+        }
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
+        nav ul li {
+            display: inline-block;
+            margin-right: 20px;
+        }
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        nav ul li a:hover {
+            text-decoration: underline;
+        }
+        .btn {
+            background-color: #0056b3;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+        }
+        .btn:hover {
+            background-color: #004080;
+        }
+        footer {
+            margin-top: 50px;
+            padding: 20px;
+            background-color: #333;
+            color: white;
+            text-align: center;
+        }
+        .benefits-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 20px;
+        }
+        .benefit-item {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            padding: 20px;
+            box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
+        }
+
+        /* Stili per il menu a discesa */
+        .hamburger {
+            display: none;
+            flex-direction: column;
+            justify-content: space-around;
+            width: 40px;
+            height: 30px;
+            cursor: pointer;
+            z-index: 10;
+        }
+        .line {
+            height: 4px;
+            width: 100%;
+            background-color: white;
+            transition: 0.3s;
+        }
+
+        /* Stili per il menu mobile */
+        .menu-overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            z-index: 9;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+        .menu-overlay ul {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+        }
+        .menu-overlay ul li {
+            margin: 20px 0;
+        }
+        .menu-overlay.show {
+            display: flex;
+        }
+
+        @media (max-width: 768px) {
+            nav ul {
+                display: none;
+            }
+            .hamburger {
+                display: flex;
+            }
+            .benefits-grid {
+                grid-template-columns: 1fr;
+            }
+        }
+    </style>
 </head>
 <body>
-    <!-- Include lo stesso header e menu di index.html -->
+    <!-- Header Section -->
+    <header>
+        <div class="container d-flex justify-content-between align-items-center">
+            <div class="logo-container">
+                <a href="https://ergoplatform.org" target="_blank" rel="noopener noreferrer">
+                    <img src="https://i.ibb.co/5Y6fP4Z/ergo.jpg" alt="Logo ERGO41" class="logo">
+                </a>
+            </div>
+            <h1>MillionErg</h1>
+            <div class="hamburger" id="hamburger">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
+            <nav>
+                <ul id="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">Chi Siamo</a></li>
+                    <li><a href="benefits.html">Vantaggi</a></li>
+                    <li><a href="donate.html">Dona</a></li>
+                    <li><a href="contact.html">Contatti</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <!-- Menu Overlay -->
+    <div class="menu-overlay" id="menu-overlay">
+        <nav>
+            <ul id="nav-links-mobile">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">Chi Siamo</a></li>
+                <li><a href="benefits.html">Vantaggi</a></li>
+                <li><a href="donate.html">Dona</a></li>
+                <li><a href="contact.html">Contatti</a></li>
+            </ul>
+        </nav>
+    </div>
 
     <!-- Sezione Vantaggi -->
     <section id="benefits">
@@ -34,24 +203,47 @@
             <div class="benefits-grid">
                 <div class="benefit-item">
                     <h3>Governance Decentralizzata</h3>
-                    <p>Le decisioni sono prese dai membri della comunità, assicurando che tutte le voci siano ascoltate e che ogni voto abbia importanza.</p>
+                    <p>Le decisioni sono prese dai membri della comunità, assicurando che tutte le voci siano ascoltate e che ogni voto abbia importanza, senza influenze esterne o centralizzate.</p>
                 </div>
                 <div class="benefit-item">
                     <h3>Privacy e Sicurezza</h3>
-                    <p>Utilizziamo crittografia avanzata per proteggere i dati dei nostri utenti e garantire la privacy in tutte le transazioni.</p>
+                    <p>Utilizziamo crittografia avanzata per proteggere i dati dei nostri utenti e garantire la privacy in tutte le transazioni, offrendo la massima tranquillità ai membri della comunità.</p>
                 </div>
                 <div class="benefit-item">
                     <h3>Accessibilità Globale</h3>
-                    <p>Chiunque, ovunque, può partecipare e beneficiare della nostra piattaforma, promuovendo una comunità veramente globale.</p>
+                    <p>Chiunque, ovunque nel mondo, può partecipare e beneficiare della nostra piattaforma, promuovendo una comunità veramente globale ed inclusiva.</p>
                 </div>
                 <div class="benefit-item">
                     <h3>Costi Ridotti</h3>
-                    <p>La nostra struttura riduce significativamente i costi delle transazioni, permettendo agli utenti di risparmiare denaro.</p>
+                    <p>La nostra struttura riduce significativamente i costi delle transazioni, permettendo agli utenti di risparmiare denaro e ottenere di più da ogni transazione.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Include lo stesso footer di index.html -->
+    <!-- Footer Section -->
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 ERGO4ONE. Tutti i Diritti Riservati.</p>
+        </div>
+    </footer>
+
+    <script>
+        // Script per gestire l'apertura e la chiusura del menu mobile
+        const hamburger = document.getElementById('hamburger');
+        const menuOverlay = document.getElementById('menu-overlay');
+
+        hamburger.addEventListener('click', () => {
+            menuOverlay.classList.toggle('show');
+        });
+
+        // Chiudi il menu quando si fa clic su un link
+        const menuLinks = document.querySelectorAll("#menu-overlay a");
+        menuLinks.forEach(link => {
+            link.addEventListener('click', () => {
+                menuOverlay.classList.remove('show');
+            });
+        });
+    </script>
 </body>
 </html>
